--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
               <div class="social-links" data-aos="fade-up" data-aos-delay="400">
 
-                <a href="#"><i class="bi bi-linkedin"></i></a>
-                <a href="#"><i class="bi bi-github"></i></a>
+                <a href="https://www.linkedin.com/in/haifa-salim-143311128/"><i class="bi bi-linkedin"></i></a>
+                <a href="https://github.com/HaifaSalim"><i class="bi bi-github"></i></a>
 
               </div>
             </div>
@@ -700,8 +700,9 @@
 
     <div class="container">
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
-      </div>
+       <a href="https://www.linkedin.com/in/haifa-salim-143311128/" target="_blank" class="linkedin">
+    <i class="bi bi-linkedin"></i>
+  </a>
     </div>
 
   </footer>
