--- a/portfolio-details-3.html
+++ b/portfolio-details-3.html
@@ -185,7 +185,7 @@
     <div class="container">
       
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/haifa-salim-143311128/"><i class="bi bi-linkedin"></i></a>
       </div>
      
     </div>
