--- a/portfolio-details-4.html
+++ b/portfolio-details-4.html
@@ -203,7 +203,7 @@ The player controls a penguin navigating through two levels, collecting coins, a
     <div class="container">
       
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/haifa-salim-143311128/"><i class="bi bi-linkedin"></i></a>
       </div>
      
     </div>
