--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -205,7 +205,7 @@ to UML-based architectural specifications for aircraft lifecycle management.
     <div class="container">
       
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/haifa-salim-143311128/"><i class="bi bi-linkedin"></i></a>
       </div>
      
     </div>
