--- a/starter-page.html
+++ b/starter-page.html
@@ -46,7 +46,7 @@
         </a>
 
         <div class="social-links text-center">
-          <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/haifa-salim-143311128/" class="linkedin"><i class="bi bi-linkedin"></i></a>
         </div>
 
         <ul>
